[package]
name = "har-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
hyper = { version = "0.14.25", features = ["client", "tcp", "http1", "server"] }
pico-args = "0.5.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
